--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
     <string name="app_title">Fahrradverleih</string>
     <string name="monheim_am_rhein">Monheim am Rhein</string>
     <string name="startup_toolbar_logo_description">Monheim am Rhein Logo</string>
+    <string name="login_email_icon_description">E-Mail Icon</string>
+    <string name="login_password_icon_description">Passwort Icon</string>
 </resources>
